--- a/composer.json
+++ b/composer.json
@@ -1,45 +1,48 @@
 {
-    "name": "hooshid/imdb-scraper",
-    "description": "Library for retrieving movie, tv series information from imdb.com",
-    "keywords": [
-        "php",
-        "imdb",
-        "imdb.com",
-        "scraping",
-        "scraper",
-        "imdb-webscrapping",
-        "imdb-scraping",
-        "imdb-scraper",
-        "imdb-metadata"
-    ],
-    "homepage": "https://github.com/hooshid/imdb-scraper",
-    "type": "library",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Alireza Kamali",
-            "email": "arka1373@gmail.com",
-            "homepage": "https://github.com/arkamali",
-            "role": "Developer"
-        }
-    ],
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-    "require": {
-        "php": ">=7.3",
-        "ext-curl": "*",
-        "ext-json": "*",
-        "voku/simple_html_dom": "^4.8"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^9.5"
-    },
-    "autoload": {
-        "psr-4": {
-            "Hooshid\\ImdbScraper\\": "src"
-        }
-    },
-    "scripts": {
-        "test": "phpunit -c phpunit.xml tests"
+  "name": "hooshid/imdb-scraper",
+  "description": "Library for retrieving movie, tv series information from imdb.com",
+  "keywords": [
+    "php",
+    "imdb",
+    "imdb.com",
+    "scraping",
+    "scraper",
+    "imdb-webscrapping",
+    "imdb-scraping",
+    "imdb-scraper",
+    "imdb-metadata"
+  ],
+  "homepage": "https://github.com/hooshid/imdb-scraper",
+  "type": "library",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Alireza Kamali",
+      "email": "arka1373@gmail.com",
+      "homepage": "https://github.com/arkamali",
+      "role": "Developer"
     }
+  ],
+  "minimum-stability": "dev",
+  "prefer-stable": true,
+  "require": {
+    "php": ">=7.3",
+    "ext-curl": "*",
+    "ext-json": "*",
+    "voku/simple_html_dom": "^4.8"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^9.5"
+  },
+  "autoload": {
+    "psr-4": {
+      "Hooshid\\ImdbScraper\\": "src"
+    }
+  },
+  "scripts": {
+    "test": [
+      "Composer\\Config::disableProcessTimeout",
+      "phpunit -c phpunit.xml tests"
+    ]
+  }
 }
