--- a/composer.json
+++ b/composer.json
@@ -31,8 +31,7 @@
   "require": {
     "php": ">=8.0",
     "ext-curl": "*",
-    "ext-json": "*",
-    "voku/simple_html_dom": "^4.8"
+    "ext-json": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.6"
